# wifi-management

./: .gitignore  LICENSE  README.md  config.env  wifi-manager.sh
data/examples/: CoffeeShop_WiFi.nmconnection  Home_Network.nmconnection  Public_Library.nmconnection  WifiConfigStore.xml  networks.md
gui/: Cargo.toml  test_konsole_output.sh
gui/src/: main.rs
gui/src/backend/: mod.rs  nmconnection.rs  script.rs
gui/src/models/: network.rs
gui/src/ui/: add_network_dialog.rs  mod.rs  network_list.rs  output_panel.rs  toolbar.rs
lib/: adb.sh  nmconnection.sh  sync.sh  utils.sh
